# RayTracing_PPM

./: Bezier.cpp  Bezier.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Functions.h  Hit.h  Kd_tree.cpp  Kd_tree.h  Light.cpp  Light.h  Object.cpp  Object.h  Polynomial.cpp  Polynomial.h  README.md  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  const.h  main.cpp
texture/: vase.ai
